# pyledctrl

./: .gitignore  CHANGELOG.md  Pipfile  README.md  bytecode_first_test.h  colors.cpp  commands.cpp  commands.h  compile_all.sh  config.h  executor.cpp  executor.h  led.h  led_strip.cpp  led_strip.h  ledctrl.ino  loop_stack.cpp  loop_stack.h  pyproject.toml  requirements.txt  setup.py  tbump.toml  tox.ini
.github/workflows/: pytest.yml
data/: blue_pulse.led  color_cycle.led  green_pulse.led  labels_and_jumps.led  red_pulse.led
data/show/: dmx_vilagitas_alap.sce  show.sce
data/show/multifile/: myshow.ses
data/simple/: blue_pulse.led  color_cycle.led  pyro_channel_test.led  timing_test.led
data/tests/: white_fade_1s.led
doc/: CAVEATS.md
etc/scripts/: compile_all.sh
ledctrl/: SignalDecoders.h  bytecode_3_test.h  bytecode_eeprom.h  bytecode_empty_writable.h  bytecode_first_test.h  bytecode_landing.h  bytecode_progmem.h  bytecode_rc.h  bytecode_store.h  bytecode_timing_test.h  bytecode_transition_test.h  calibration.cpp  calibration.h  colors.h  commands.cpp  commands.h  config.h  edge_detector.h  errors.cpp  errors.h  executor.cpp  executor.h  led.h  led_strip.cpp  led_strip.h  ledctrl.ino  loop_stack.cpp  loop_stack.h  pyro.cpp  pyro.h  serial_protocol.cpp  serial_protocol.h  signal_decoders.cpp  signal_decoders.h  switch.h  transition.cpp  transition.h  trigger.cpp  trigger.h  types.h  (+3 more)
pyledctrl/: __init__.py  app.py  executor.py  logger.py  upload.py  utils.py  version.py
pyledctrl/compiler/: __init__.py  ast.py  bytecode.py  colors.py  compiler.py  contexts.py  errors.py  formats.py  optimisation.py  plan.py  stages.py  utils.py
pyledctrl/parsers/: bytecode.py  sunlite.py
src/pyledctrl/: __init__.py  __main__.py  app.py  config.py  executor.py  player.py  upload.py  utils.py  version.py
src/pyledctrl/cli/: app.py  utils.py
src/pyledctrl/compiler/: __init__.py  ast.py  bytecode.py  colors.py  compiler.py  contexts.py  errors.py  formats.py  jumps.py  markers.py  optimisation.py  plan.py  stages.py  utils.py
src/pyledctrl/parsers/: bytecode.py
test/: test_ast.py  test_compiler.py  test_executor.py  test_formats.py  test_player.py  test_utils.py
test/data/: blue_pulse.oled  color_cycle.oled  fade_and_step.oled  green_pulse.json  green_pulse.oled  pyro_channel_test.oled  timing_test.json  timing_test.oled  white_fade_0s.json  white_fade_0s.led  white_fade_40ms.json  white_fade_40ms.oled
test/data/compiler/: _labels_and_jumps.led  blue_pulse.ast  blue_pulse.json  color_cycle.ast  color_cycle.json  fade_and_step.ast  fade_and_step.json  fade_and_step.led  green_pulse.ast  green_pulse.led  pyro_channel_test.ast  pyro_channel_test.json  pyro_channel_test.led  red_pulse.ast  red_pulse.json  red_pulse.led  red_pulse.oled  show_file_1.ast  show_file_1.json  show_file_1.led  show_file_1.oled  timing_test.ast  white_fade_0s.ast  white_fade_0s.oled  white_fade_1s.ast  white_fade_1s.json  white_fade_1s.oled  white_fade_40ms.ast  white_fade_40ms.led
test/data/executor/: show_file_1.tab
testfiles_from_bruce/: DRONESHOW.sce  Switch 1.sce  droneshow01.sce  show.sce
testfiles_from_bruce/multifile/: drone35 rgb fade.sce  drone35 str.sce  drone35.sce
