[tool.poetry]
name = "pyledctrl"
version = "4.0.0"
description = "Compiler to convert LED light show scripts to bytecode format"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "pyledctrl", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = {version = "^8.0.0", optional = true}
tqdm = {version = "^4.47.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.0"}
pytest-cov = "^3.0.0"

[tool.poetry.extras]
cli = ["click", "tqdm"]

[tool.poetry.scripts]
ledctrl = "pyledctrl.cli.app:main"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
secondary = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/pyledctrl/cli/app.py", "src/pyledctrl/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["@abstractmethod", "@overload", "pragma: no cover"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
