[tool.poetry]
name = "pyledctrl"
version = "4.1.0"
description = "Compiler to convert LED light show scripts to bytecode format"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "pyledctrl", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
click = {version = "^8.1.3", optional = true}
tqdm = {version = "^4.64.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1.0"}
pytest-cov = "^4.0.0"

[tool.poetry.extras]
cli = ["click", "tqdm"]

[tool.poetry.scripts]
ledctrl = "pyledctrl.cli.app:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/pyledctrl/cli/app.py", "src/pyledctrl/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["@abstractmethod", "@overload", "pragma: no cover"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
