[project]
name = "pyledctrl"
version = "4.2.0"
description = "Compiler to convert LED light show scripts to bytecode format"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"

[project.optional-dependencies]
cli = ["click>=8.1.3", "tqdm>=4.64.1"]

[project.scripts]
ledctrl = "pyledctrl.cli.app:main"

[dependency-groups]
dev = ["pytest>=7.2.1", "coverage[toml]>=7.1.0", "pytest-cov>=4.0.0"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/pyledctrl/cli/app.py", "src/pyledctrl/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["@abstractmethod", "@overload", "pragma: no cover"]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
